// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge snapshots > matches snapshot — default variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-badge-default-surface text-badge-default-foreground hover:bg-badge-default-surface/80"
>
  default
</div>
`;

exports[`Badge snapshots > matches snapshot — destructive variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-badge-destructive-surface text-badge-destructive-foreground hover:bg-badge-destructive-surface/80"
>
  destructive
</div>
`;

exports[`Badge snapshots > matches snapshot — outline variant 1`] = `
<div
  class="inline-flex items-center rounded-full border border-badge-border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-badge-outline-foreground"
>
  outline
</div>
`;

exports[`Badge snapshots > matches snapshot — secondary variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-badge-secondary-surface text-badge-secondary-foreground hover:bg-badge-secondary-surface/80"
>
  secondary
</div>
`;
